@@ -1,0 +1,7 @@
+﻿<Ui>
+<Include file="Config.xml"/>
+ 
+<!-- 
+<Script file="Config.lua"/>
+  -->
+</Ui>
