@@ -1,0 +1,10 @@
+﻿<Ui>
+
+<!-- 
+<Include file="Config.xml"/>
+ -->
+ 
+
+<Script file="uierror.lua"/>
+
+</Ui>
