@@ -7,6 +7,7 @@
 <Include file="IconType_conditionicon\includes.core.xml"/>
 <Include file="IconType_cooldown\includes.core.xml"/>
 <Include file="IconType_default\includes.core.xml"/>
+<Include file="IconType_dotwatch\includes.core.xml"/>
 <Include file="IconType_dr\includes.core.xml"/>
 <Include file="IconType_icd\includes.core.xml"/>
 <Include file="IconType_item\includes.core.xml"/>
@@ -18,8 +19,8 @@
 <Include file="IconType_runes\includes.core.xml"/>
 <Include file="IconType_swingtimer\includes.core.xml"/>
 <Include file="IconType_totem\includes.core.xml"/>
+<Include file="IconType_uierror\includes.core.xml"/>
 <Include file="IconType_unitcooldown\includes.core.xml"/>
-<Include file="IconType_dotwatch\includes.core.xml"/>
 <Include file="IconType_wpnenchant\includes.core.xml"/>
 
 </Ui>
